examples/test/testpolicy146.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy146
  namespace: namespace150
spec:
  podSelector:
    matchLabels:
      key46: value22
      key13: value6
      key36: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value26
          key12: value3
          key33: value6
      podSelector:
        matchLabels:
          key43: value24
          key24: value7
